<resources>
    <string name="app_name">SpinnerApp</string>
    <string name="snackbar">Snack Bar</string>
    <string name="toast">Toast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spinner">Spinner</string>
    <string name="main_activity">Main activity</string>
    <string name="first_fragment">First Fragment</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="add">Add</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="list_view_array_adapter">List View Array Adaptor</string>
    <string name="list_view_base_adapter">List View Base Adapter</string>
    <string name="roll_no">Roll No.</string>
    <string name="name">Name</string>
    <string name="list_view_with_data">List View With Data</string>
    <string name="course">Course</string>
    <string name="enter_your_roll_no">Enter Your Roll No</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_course">Enter Your Course</string>
    <string name="submit">Submit</string>
    <string name="you_want_to_delete_this_list">You want to delete this list?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string-array name="gender">
        <item name="male">Male</item>
        <item name="female">Female</item>
        <item name="other">Other</item>
    </string-array>
</resources>