<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/roll_no"
        android:textSize="@dimen/sp_20"
        android:id="@+id/tvStudentRollNo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_20"
        android:text="@string/name"
        android:id="@+id/tvStudentName"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/course"
        android:textSize="@dimen/sp_20"
        android:id="@+id/tvStudentCourse"/>

</LinearLayout>